trunk/Archive2/15/d9c9941dfed85c/output
main.cpp:9:25: error: 'integer_sequence' is not a member of 'std'
 struct my_meta_function<std::integer_sequence<Is...>, U>
                         ^
main.cpp:9:25: error: 'integer_sequence' is not a member of 'std'
main.cpp:9:49: error: expected parameter pack before '...'
 struct my_meta_function<std::integer_sequence<Is...>, U>
                                                 ^
main.cpp:9:52: error: wrong number of template arguments (1, should be 2)
 struct my_meta_function<std::integer_sequence<Is...>, U>
                                                    ^
main.cpp:6:8: error: provided for 'template<class T, class U> struct my_meta_function'
 struct my_meta_function;
        ^
main.cpp:12:2: error: extra ';' [-Wpedantic]
 };
  ^
main.cpp:15:29: error: type/value mismatch at argument 1 in template parameter list for 'template<class T, class U> struct my_meta_function'
 struct my_meta_function<N, U>
                             ^
main.cpp:15:29: error:   expected a type, got 'N'
main.cpp:16:24: error: 'make_integer_sequence' is not a member of 'std'
     : my_meta_function<std::make_integer_sequence<N>, U>
                        ^
main.cpp:16:24: error: 'make_integer_sequence' is not a member of 'std'
main.cpp:16:52: error: wrong number of template arguments (1, should be 2)
     : my_meta_function<std::make_integer_sequence<N>, U>
                                                    ^
main.cpp:6:8: error: provided for 'template<class T, class U> struct my_meta_function'
 struct my_meta_function;
        ^
